# ai-workflow-experiments

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/agent/model/: agent_model.py
backend/agent/repository/: agent_repository.py
backend/agent/service/: agent_service.py
backend/agent/web/: agent_router.py
backend/ai/: agent.py  ai_service.py  ai_service_context.py  client_interface.py
backend/ai/anthropic/: anthropic_client.py  messages_to_anthropic_converter.py  tools_to_anthropic_converter.py
backend/ai/mistral/: messages_to_mistral_converter.py  mistral_client.py  tools_to_mistral_converter.py
backend/ai/utils/: ai_tool_params_utils.py  api_tool_params_utils.py  execute_mcp_tool.py
backend/alembic/: env.py
backend/alembic/versions/: 18e1848a1e01_create_agent_table.py  23a89543ec49_create_api_table.py  2649828f2c8a_create_chat_table.py  3e052148bac2_create_flow_model_table.py  4c66c7245d27_create_flow_edge_table.py  54554a3429b4_insert_flows_table.py  9fbf85d1dd22_insert_apis_and_agents_table.py  b558b20c7b10_create_message_table.py  b88395791797_create_flow_log_table.py  be94e91abe8a_create_agent_api_mapping_table.py  e9c80ff06e36_create_flow_node_table.py
backend/api/model/: api_model.py
backend/api/repository/: api_repository.py
backend/api/service/: api_service.py
backend/api/web/: api_router.py
backend/chat/model/: chat_model.py  message_model.py
backend/common/: base.py  pydantic_type_with_adapter.py
backend/shop_mock_service/: main.py
(+188 files in other folders)
