[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "mistralai>=1.10.0",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
